--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,7 @@ Architecture: all
 Depends:
  ${python3:Depends},
  ${misc:Depends},
- python3-kombu,
+ python3-kombu (>= 4.2.1-3),
  wazo-auth-client-python3,
  wazo-plugind-client-python3,
  xivo-lib-python-python3
