--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 https://github.com/wazo-platform/wazo-lib-rest-client/archive/master.zip
 https://github.com/wazo-platform/wazo-auth-client/archive/master.zip
 https://github.com/wazo-platform/xivo-lib-python/archive/master.zip
+importlib_metadata==1.6.0  # from kombu
 kombu==4.6.11
 pyyaml==3.13
 requests==2.21.0
