--- a/debian/control
+++ b/debian/control
@@ -2,16 +2,16 @@ Source: wazo-plugind-cli
 Section: python
 Priority: extra
 Maintainer: Wazo Maintainers <dev+pkg@wazo.community>
-Build-Depends: debhelper (>= 9), dh-python, python3-all, python3-setuptools
+Build-Depends: debhelper (>= 12), dh-python, python3-all, python3-setuptools
 Standards-Version: 3.9.6
-X-Python3-Version: >= 3.4
+X-Python3-Version: >= 3.9
 
 Package: wazo-plugind-cli
 Architecture: all
 Depends:
  ${python3:Depends},
  ${misc:Depends},
- python3-kombu (>= 4.2.1-3),
+ python3-kombu,
  wazo-auth-client-python3,
  wazo-plugind-client-python3,
  xivo-lib-python-python3
